# openim-mcp-cli-server

./: .env.template  .gitignore  CLI_TROUBLESHOOTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  start.sh  test_curl.sh  test_validation.sh
docs/: CLI_TROUBLESHOOTING.md  DEPLOY.md  SECURITY.md  test_curl.sh  test_env.sh  test_mcp_client.py  test_validation.sh
docs/tests/: test_cli.sh  test_policy_toggle.sh
docs/tests/policy_test_results/: 01_private_chat_blocked.txt  02_private_chat_enabled.txt  03_create_group_blocked.txt  04_create_group_enabled.txt  05_notification_blocked.txt  06_notification_enabled.txt  07_invite_blocked.txt  08_invite_enabled.txt  09_kick_blocked.txt  10_kick_enabled.txt  11_revoke_blocked.txt  12_revoke_enabled.txt
src/openim_mcp/: __init__.py  cli.py  config.py  openim_client.py  server.py
